--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://www.tiktok.com/api/img/?itemId=697928902.png">
     <title>Layout-CSS</title>
-    <i link rel="shortcut icon" href="favicon.png"></i>
 </head>
 <body>
     
