--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://www.tiktok.com/api/img/?itemId=697928902.png">
+    <link rel="icon" href="https://previews.123rf.com/images/fokaspokas/fokaspokas1806/fokaspokas180600082/103143970-volumen-m%C3%A1s-icono-en-el-fondo-transparente-.jpg">
     <title>Layout-CSS</title>
 </head>
 <body>
